--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=eComPlatform.db"
+    "DefaultConnection": "Data source=eComPlatform.db",
+    "Redis": "localhost"
   },
   "ApiURL": "https://localhost:5001/"
 }
