--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -4,6 +4,7 @@
     <ProjectReference Include="..\Core\Core.csproj" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
+	<PackageReference Include="StackExchange.Redis" Version="2.2.4" />
   </ItemGroup>
 
   <ItemGroup>
