--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -2,9 +2,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.csproj" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.6" />
+	<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
 	<PackageReference Include="StackExchange.Redis" Version="2.2.4" />
+	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -12,7 +16,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
 </Project>
