--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,6 +8,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=eComPlatform.db",
+    "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
   },
   "ApiURL": "https://localhost:5001/"
