--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
@@ -10,6 +10,10 @@
     "DefaultConnection": "Data source=eComPlatform.db",
     "IdentityConnection": "Data source=identity.db",
     "Redis": "localhost"
+  },
+  "Token": {
+    "Key": "super secret key",
+    "Issuer": "https://localhost:5001"
   },
   "ApiURL": "https://localhost:5001/"
 }
