--- a/client/angular.json
+++ b/client/angular.json
@@ -74,6 +74,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "client:build",
+            "proxyConfig": "src/proxy.config.json",
             "sslKey": "ssl/server.key",
             "sslCert": "ssl/server.crt",
             "ssl": true
