--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.6" />
+    <PackageReference Include="TestGenerator" Version="1.0.4" />
   </ItemGroup>
 
 </Project>
